Added Genre and Pagination

--- a/movies.html
+++ b/movies.html
@@ -8,9 +8,13 @@
   </head>
   <body>
     <header>
-      <h1>Should I watch it?</h1>
+      <a href="/index.html"><h1>Should I watch it?</h1></a>
       <form id="form">
         <input type="text" placeholder="Search" id="search" class="search" />
+        <select id="genre" class="genre">
+          <option value="">All Genres</option>
+          <!-- Add options for specific genres if needed -->
+        </select>
       </form>
     </header>
     <main id="main"></main>
